--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,11 @@
       <name>guice maven</name>
       <url>http://guice-maven.googlecode.com/svn/trunk</url>
     </repository>
+
+    <repository>
+      <id>maven.jenkins-ci.org</id>
+      <url>http://maven.jenkins-ci.org:8081/content/repositories/releases/</url>
+    </repository>
   </repositories>
 
   <dependencies>
